# slack-fast-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
scripts/: extract_slack_tokens.py
src/slack_fast_mcp/: __main__.py  cache.py  config.py  main.py  sanitize.py  server.py  slack_client.py  text.py  types.py
src/slack_fast_mcp/resources/: channels.py  users.py
src/slack_fast_mcp/tools/: attachments.py  channels.py  conversations.py  messages.py  reactions.py  search.py  users.py
tests/: conftest.py  test_attachments_unit.py  test_cache_unit.py  test_channels_unit.py  test_config_unit.py  test_conversations_unit.py  test_messages_unit.py  test_reactions_unit.py  test_sanitize_unit.py  test_search_unit.py  test_text_unit.py  test_users_unit.py
