[project]
name = "slack-fast-mcp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0.0",
    "slack-sdk>=3.27.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "prek",
    "ty",
]

[project.scripts]
slack-fast-mcp = "slack_fast_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
